kustomize/core/longhorn/resources/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  entryPoints: [web, websecure]
  routes:
    - match: Host(`longhorn.honker.dev`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
          strategy: RoundRobin
          weight: 10
  tls:
    secretName: honker-dev-tls
